	* configs/pjrc-8051: Configuration converted to use the kconfig-frontends
	  tools (2014-3-6)
	* configs/rgmp/arm/default: Configuration converted to use the
	  kconfig-frontends tools (2014-3-6)
	* configs/rgmp/arm/nsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-6)
	* configs/rgmp/x86/default: Configuration converted to use the
	  kconfig-frontends tools (2014-3-6)
	* configs/rgmp/x86/nsh: Configuration converted to use the
	  kconfig-frontends tools (2014-3-6)
	* configs/rgmp/x86/helloxx: Configuration converted to use the
	  kconfig-frontends tools (2014-3-6)
	* configs/rgmp/x86/cxxtest: Configuration converted to use the
	  kconfig-frontends tools.  This completes the conversion of all
	  configurations to the newer format (2014-3-6)
	* Removed the CONFIG_NUTTX_NEWCONFIG setting from every defconfig
	  file (2014-3-6).
	* The legacy, manual configuration is no longer supported by the
	  NuttX build system.  Only the newer configurations generated by
	  the kconfig-frontends tools will generate viable NuttX
	  configurations.  All board configurations in the NuttX source tree
	  have bee converted to use the newer configuration, but if you have
	  some older style configurations for you board, you will need to
	  convert those configurations to use the kconfig-frontends tools.
	  See http://www.nuttx.org/doku.php?id=wiki:howtos:convertconfig for
	  some guidelines (2014-3-6).
	* drivers/serial/Kconfig:  Correct an error introduced in this file
	  in very recent commits (2013-3-6).
	* configs/*sam*:  Refresh all SAM* configurations with the latest
	  Kconfig files (2014-3-6).
	* configs/stm32f4discovery:  Refresh all configurations (except
	  winbuild) with the latest Kconfig files (2014-3-6).
	* configs/viewtool-stm32f107:  Refresh all configurations with the
	  latest Kconfig files (2014-3-6).
	* configs/16z, mikroe-stm32f4, olimex-lpc1766stk, sim, and
	  stm32f429i-disco: Refresh all configurations (2014-3-6).