@@ -6942,5 +6942,7 @@
 	  winbuild) with the latest Kconfig files (2014-3-6).
 	* configs/viewtool-stm32f107:  Refresh all configurations with the
 	  latest Kconfig files (2014-3-6).
-	* configs/16z, mikroe-stm32f4, olimex-lpc1766stk, sim, and
-	  stm32f429i-disco: Refresh all configurations (2014-3-6).
+	* configs/16z, mikroe-stm32f4, olimex-lpc1766stk, px4fmu-v2_upstream,
+	  sim, and stm32f429i-disco: Refresh all configurations (2014-3-6).
+	* Documentation/NuttShell.html:  Update per recommendations from Max\
+	  Kriegleder (2014-3-6).
